@@ -5,7 +5,18 @@
     version="2.4">
 
     <display-name>Shibboleth Identity Provider</display-name>
-
+    
+    <!-- Parameter that allows the domain of all cookies to be explicitly set.  
+         If not set the domain is let empty which means that the cookie will only ever be sent 
+         to the IdP host.
+    -->
+    <!--
+    <context-param>
+        <param-name>cookieDomain</param-name>
+        <param-value>example.org</param-value>
+    </context-param>
+    -->
+    
     <!--
         Spring 2.0 application context files.  Files are loaded in the order they appear with subsequent files 
         overwriting same named beans in previous files.
